# moviesdb

./: Cargo.toml  README.md
src/: db.rs  error.rs  main.rs  models.rs  service.rs  services.rs  types.rs
src/types/: mod.rs  movie.rs  torrent.rs
