[package]
name = "rust-movies"
version = "0.1.0"
authors = ["Valeriy Kostikov <mkoctuk@gmail.com>"]

[dependencies]
postgres = { version = "0.15", features = ["with-chrono"] }
chrono = "0.4"
# iron = "0.5.*"
# lazy_static = "0.2"
# postgres-shared = "0.4.0"
clippy = {version = "*", optional = true}

[features]
default = []
# with-bit-vec = ["postgres-shared/with-bit-vec"]
# with-chrono = ["postgres-shared/with-chrono"]
# with-eui48 = ["postgres-shared/with-eui48"]
# with-geo = ["postgres-shared/with-geo"]
# with-rustc-serialize = ["postgres-shared/with-rustc-serialize"]
# with-serde_json = ["postgres-shared/with-serde_json"]
# with-time = ["postgres-shared/with-time"]
# with-uuid = ["postgres-shared/with-uuid"]