[package]
name = "rust-movies"
version = "0.1.0"
authors = ["Valeriy Kostikov <mkoctuk@gmail.com>"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
postgres = { version = "0.15.1", features = ["with-chrono"] }
postgres-derive = "0.3"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.1"
hyper = "0.11"
# tokio-proto = "0.1"
# num_cpus = "1.2"
# lazy_static = "0.2"
# postgres-shared = "0.4.0"
# clippy = {version = "*", optional = true}

# [features]
# default = []
# with-bit-vec = ["postgres-shared/with-bit-vec"]
# with-chrono = ["postgres-shared/with-chrono"]
# with-eui48 = ["postgres-shared/with-eui48"]
# with-geo = ["postgres-shared/with-geo"]
# with-rustc-serialize = ["postgres-shared/with-rustc-serialize"]
# with-serde_json = ["postgres-shared/with-serde_json"]
# with-time = ["postgres-shared/with-time"]
# with-uuid = ["postgres-shared/with-uuid"]
